<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pinxrp.xrp.TsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar_layout" />


    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/faq"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:tint="#FF9800"
                    app:srcCompat="@drawable/ic_faq" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/faq"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/privacy"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:tint="#FF9800"
                    app:srcCompat="@drawable/ic_policy" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/privacy_policy"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:id="@+id/mailSupport"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:tint="#FF9800"
                    app:srcCompat="@drawable/ic_email" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/e_mail"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/app_version"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:id="@+id/version"
                    android:text="1.0.0"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Menu"
                        android:text="@string/push_messages"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:text="@string/enable_disable_notifications"/>
                </LinearLayout>

                <Switch
                    android:id="@+id/sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:thumbTint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorWindowUpper"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:text="@string/cache_used"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:id="@+id/cache"
                    android:text="~"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                />

            <LinearLayout
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="57dp"
                    android:layout_height="51dp"
                    app:srcCompat="@drawable/instalogo"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/instatext"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insta"
                    android:textColorLink="#FFC107" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/rc_header"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="15dp">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="59dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/telegram" />

                <TextView
                    android:id="@+id/telegramtext"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/telegram"
                    android:textColorLink="#2196F3"
                    android:autoLink="web"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
